--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "generate-client": "openapi-ts --input http://localhost:8000/openapi.json --output ./src/client --client @hey-api/client-axios",
-    "prepare": "husky install"
+    "tolgee:extract": "tolgee extract",
+    "tolgee:push": "tolgee push",
+    "tolgee:pull": "tolgee pull"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.22.0",
@@ -18,13 +20,18 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tolgee/i18next": "^6.2.6",
+    "@tolgee/react": "^6.2.6",
+    "@tolgee/web": "^6.2.6",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.2.1",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
